<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_login_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorwhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        android:background="@color/colorwhite">

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@+id/login_et_password"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/login_buttons_text_size" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/lists_title_bottom_margin"
        android:background="@color/colorwhite">

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="@dimen/edit_text_padding"
            android:textSize="@dimen/login_buttons_text_size" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn_signin"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button_signin_with_password"/>

    <!--<com.google.android.gms.Utilities.SignInButton-->
    <!--android:id="@+id/login_with_google"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_margin="16dp"/>-->

    <TextView
        android:id="@+id/login_tv_forgot_password"
        style="@style/LoginCreateTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:text="@string/button_forgot_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/LoginCreateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dont_have_account" />

        <TextView
            android:id="@+id/login_tv_sign_up"
            style="@style/LoginCreateTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/button_create_account" />
    </LinearLayout>
    <com.google.android.gms.common.SignInButton
        android:visibility="gone"
        android:id="@+id/login_btn_googlesignin"
        android:paddingTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></com.google.android.gms.common.SignInButton>
    <com.facebook.login.widget.LoginButton
        android:visibility="gone"
        android:id="@+id/login_btn_facebooksignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="login with facebook"
        android:layout_marginTop="8dp"/>


</LinearLayout>